# amcep

./: CHANGELOG.md  CONTRIBUTING.md  README.md  app.js  index.html  llms.txt  netlify.toml  pyproject.toml  robots.txt  sitemap.xml  styles.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: counterexample.md  experiment.md  retraction.md  theorem.md
.github/workflows/: allocation-benchmark.yml  ci.yml  lean.yml  pages.yml  paired-allocation.yml  robustness-attacks.yml  synthetic-benchmark.yml
data/: claims.json  claims.schema.json
docs/: release-policy.md
experiments/: __init__.py  robustness_attacks.py
formal/: AMCEP.lean  README.md  lakefile.lean
formal/AMCEP/: Core.lean  Limits.lean
models/: model-registry.json
research/: allocation-benchmark.md  allocation-results.md  assumptions.md  definitions.md  empirical-protocol.md  math-audit.md  paired-allocation-protocol.md  quantum-audit.md  robustness-attacks.md  robustness-results.md  safe-score-contract.md  synthetic-benchmark.md  topology-audit.md
scripts/: run_allocation_benchmark.py  run_paired_allocation.py  run_robustness_attacks.py  run_synthetic_benchmark.py
src/: __init__.py  allocation_benchmark.py  amcep.py  paired_allocation.py  safe_scores.py  synthetic_benchmark.py
tests/: test_allocation_benchmark.py  test_amcep.py  test_claim_ledger.py  test_paired_allocation.py  test_properties.py  test_robustness_attacks.py  test_safe_scores.py  test_synthetic_benchmark.py
