[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "amcep-lab"
version = "0.1.0"
description = "Falsification-first AMCEP research laboratory"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100,<7",
  "jsonschema>=4.22,<5",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1"
]

[tool.setuptools.packages.find]
include = ["src*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
